fix: patch spacing glitch for score section

--- a/src/Main.css
+++ b/src/Main.css
@@ -19,6 +19,10 @@ main {
 	margin-top: 2em;
 }
 
+.adjusted {
+	margin-top: calc(2em - 3px);
+}
+
 .button {
 	background-color: transparent;
 	border: 1px solid black;
